--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -35,7 +35,12 @@
 }.navbarMobileMenu a:hover{
     font-weight: bold   ;
 }
-@media screen and (max-width:520px) {
+.navbarActions{
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width:650px) {
     .navbarMobile{
         display: block;
     }
