--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    align-items: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
     background-color: var(--secondary-color);
 }
@@ -23,6 +23,13 @@
 }
 .footerGetInTouch{
     justify-content: center;
-    align-items: center;
+    align-content: center;
     text-align: center;
+}
+@media screen and (max-width:500px) {
+    .footerContainer{
+        flex-direction: column;
+        align-content: center;
+        text-align: center;
+    }
 }
