margin top added

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -5,6 +5,7 @@
     align-content: flex-start;
     flex-wrap: wrap;
     background-color: var(--secondary-color);
+    margin-top: 1em;
 }
 .footerContainer div{
     margin: 1em;
