--- a/client/src/Pages/Profile/Profile.css
+++ b/client/src/Pages/Profile/Profile.css
@@ -1,5 +1,49 @@
 .profileContainer{
     width: 100%;
     min-height: 100vh;
-    background-color: red;
+    /* background-color:    ; */
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    align-items: center;
+    padding-top: 1em;
+
+}
+.profilePicture{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+    /* background-color: blue; */
+}
+.profileHeader{
+    width: 100%;
+    max-width: 1200px;
+    /* background-color: cyan; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    padding: 1em;
+}
+.profileDetails{
+    gap: .5em;
+}
+.profileCards{
+    display: flex;
+    gap: 1em;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+@media screen and (max-width:600px) {
+    .profileHeader{
+        flex-direction: column;
+        align-items: center;
+    }
+    .profileDetails{
+       text-align: center;
+    }
 }
