corrected user registration

--- a/client/src/Pages/AddBook/AddBook.css
+++ b/client/src/Pages/AddBook/AddBook.css
@@ -3,6 +3,7 @@
     display: flex;
     padding: 1em 2em;
     justify-content: center;
+    background-color: var(--secondary-color);
 }
 .addBookContainer .form{
     display: flex;
