--- a/client/src/Pages/CartPage/Cart.css
+++ b/client/src/Pages/CartPage/Cart.css
@@ -2,4 +2,21 @@
     display: flex;
     justify-content: center;
     padding-bottom: 1em;
+    min-height: 100dvh;
+}
+.cartBuy{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    padding-bottom: 2em;
+}
+.cartBuy button{
+    background-color: var(--secondary-color);
+    border : none;
+    padding: 1em;
+    width: 80%;
+    max-width: 300px;
+    font-weight: bold   ;
 }
